--- a/package.json
+++ b/package.json
@@ -33,15 +33,21 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "phaser-ce": "2.10.5",
     "rxjs": "5.5.8",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
-    "typescript": "~2.6.2"
+    "expose-loader": "0.7.5",
+    "typescript": "~2.6.2",
+    "webpack-merge": "4.1.2"
   },
   "description": "An Ionic project",
+  "config": {
+    "ionic_webpack": "./webpack.config.js"
+  },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
