--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
-    "cordova-plugin-device": "^2.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.2.0",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "2.0.5",
+    "cordova-plugin-ionic-webview": "1.2.1",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-whitelist": "1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "phaser-ce": "2.10.5",
